--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -9,12 +9,12 @@
         margin-bottom: 8px;
     }
     &__label {
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        padding: 8px 4px 0 0;
+        min-width: 100px;
+        padding: .5em 0;
+        text-align: center;
      }
     &__input {
+        display: block;
         width: 100%;
         border: none;
         border-radius: 4px;
@@ -41,5 +41,13 @@
         display: flex;
         justify-content: flex-end;
         width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .form {
+        &__group {
+            display: block;
+        }
     }
 }
