--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -2,17 +2,34 @@
 
 
 .login {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
+    background: #5801CB;
     height: 100vh;
     color: white;
-    width: 30%;
+
+    h1 {
+        margin: 0;
+        padding: 2em;
+        text-align: center;
+    }
+
+    form {
+        margin: 0 auto;
+        width: 45%;
+
+        button {
+            text-transform: uppercase;
+            color: #5801CB;
+            font-size: .9em;
+            font-weight: bold;
+        }
+    }
 }
 
 @media (max-width: 768px) {
     .login {
-        width: 80%;
+        flex-direction: column;
+        form {
+            width: 80%;
+        }
     }
 }
