--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,3 +3,11 @@ $main-bg-color: #4b6cb7;
 $main-dark-color: #292b5c;
 $light-french: #d1b873;
 $blog-bg-color: #ff8300;
+
+
+$primary: #1292B4;
+$white: #FFF;
+$lighter: #F3F3F3;
+$light: #DAE1E7;
+$dark: #444;
+$black: #000;
