--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
 
 html {
   box-sizing: border-box;
@@ -22,7 +22,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   //font-family: Lato, Sans-Serif;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 ::selection {
   color: #fff;
