--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -2,9 +2,11 @@
 
 .section {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   min-height: 100vh;
+  padding-top: 2em;
   background: url("../../assets//images/Light-blue.jpg") fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -15,7 +17,6 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    color: $main-dark-color;
     &--row-reverse {
       flex-direction: row-reverse;
     }
@@ -46,9 +47,11 @@
     &--text {
       line-height: 1.65;
       letter-spacing: 0.1px;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
+      color: $dark;
     }
     &--title {
+      color: $black;
       margin: 0;
       text-transform: capitalize;
     }
@@ -58,6 +61,64 @@
     width: 350px;
     padding: 40px;
   }
+  &__social {
+    padding: 0;
+    align-self: flex-end;
+    list-style-type: none;
+    margin-left: 10em;
+    &__link {
+      padding: 0.2em;
+
+      img:hover {
+        border-radius: 50%;
+        background: $primary;
+      }
+    }
+  }
+  &__footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2em;
+    width: 100%;
+    &__list {
+      display: flex;
+      list-style-type: none;
+      padding-left: 0;
+    }
+    &__link {
+      margin: 0 0.5em;
+      padding: 0.5em 1em;
+      font-size: 0.9em;
+      font-weight: bold;
+      a {
+        color: $primary;
+        text-decoration: none;
+        text-transform: uppercase;
+      }
+      a:hover {
+        color: $black;
+      }
+    }
+  }
+}
+
+@keyframes change {
+  0% {
+    background-size: 0 0, 0 0, 0 0;
+  }
+  25% {
+    background-size: 0 0, 0 0, 30% 30%;
+  }
+  50% {
+    background-size: 10% 10%, 40% 40%, 60% 60%;
+  }
+  75% {
+    background-size: 100% 100%, 100% 100%, 100% 100%;
+  }
+  100% {
+    background-size: 100% 100%, 100% 100%, 100% 100%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -66,10 +127,28 @@
     &__content--row-reverse {
       flex-direction: column;
     }
+    &__img {
+      height: 50%;
+      width: 50%;
+      padding: 0;
+    }
     &__article {
       width: 100%;
       margin: 0 auto;
       padding: 20px;
+    }
+    &__social {
+      display: flex;
+      margin: 0;
+      align-self: center;
+    }
+    &__footer {
+      &__link {
+        margin: 0;
+        padding-right: 0.2em;
+        font-size: 0.7em;
+        font-weight: bold;
+      }
     }
   }
 }
