--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -15,8 +15,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: #000046;
-  color: #0b0500;
+  //background: #000046;
+  //color: #0b0500;
   width: 100%;
   height: 100vh;
   font-size: 16px;
