--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -7,7 +7,8 @@
   align-items: center;
   min-height: 100vh;
   padding-top: 2em;
-  background: url("../../assets//images/Light-blue.jpg") fixed;
+  //background: url("../../assets//images/Light-blue.jpg") fixed;
+  background-color: $lighter;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
